fix(CircleChart): 💄 not centered

--- a/src/components/Shared/CircleChart/CircleChart.module.css
+++ b/src/components/Shared/CircleChart/CircleChart.module.css
@@ -7,6 +7,8 @@
 
   position: relative;
 
+  display: grid; /* for centering; flex, inline-flex also works */
+
   width: 1em;
   height: 1em;
   margin: 0;
